--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+.form-group{
+    margin-top: 12px;
+}
+.nav-link{
+    color: blueviolet !important;
+}
+.form-control{
+    color: blueviolet !important;
+}
