--- a/src/app/seller-home/seller-home.component.html
+++ b/src/app/seller-home/seller-home.component.html
@@ -1,1 +1,2 @@
 <p>seller-home works!</p>
+<!-- <button type="button" class="btn btn-outline-primary" routerLink="seller-auth">Sign Out</button> -->
