--- a/src/app/seller-auth/seller-auth.component.html
+++ b/src/app/seller-auth/seller-auth.component.html
@@ -1,5 +1,6 @@
 <div class="container d-flex justify-content-center">
-    <div class="card shadow col-4 p-4 m-4 sellercard">
+    <div *ngIf="toggleLogin" class="card shadow col-4 p-4 m-4 sellercard">
+        <h1 class="sellersiguptitle text-center">Seller SignUP</h1>
         <form #sellerSignUp="ngForm" (ngSubmit)="signUp(sellerSignUp.value)">
             <div class="form-group">
                 <input type="text" class="form-control" ngModel name="name" placeholder="Enter Your Name">
@@ -12,6 +13,30 @@
             </div>
             <div class="form-group">
                 <button class="btn btn-success">SignUp</button>
+            </div>
+            <div class="text-center">
+                <a class="sellt oglerLink " (click)="showLogin()">Already have an Account ! Click Here</a>
+            </div>
+        </form>
+    </div>
+
+
+    <!-- Login -->
+
+    <div *ngIf="!toggleLogin" class="card shadow col-4 p-4 m-4 sellercard">
+        <h1 class="sellerlogintitle text-center">Seller Login</h1>
+        <form #sellerLogin="ngForm" (ngSubmit)="login(sellerLogin.value)">
+            <div class="form-group">
+                <input type="text" class="form-control" ngModel name="email" placeholder="Enter Your Email">
+            </div>
+            <div class="form-group">
+                <input type="password" class="form-control" ngModel name="password" placeholder="Enter Your Password">
+            </div>           
+            <div class="form-group">
+                <button class="btn btn-success">Login</button>
+            </div>
+            <div class="text-center">
+                <a class="selltoglerLink " (click)="showLogin()">Don't have an Account ! Click Here</a>
             </div>
         </form>
     </div>
