--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,26 +1,50 @@
-
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
-    <div class="container-fluid">
-      <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link" routerLink="seller-auth">Seller</a>
-            </li>          
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" routerLink="#">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" routerLink="#">Cart(0)</a>
-          </li>
-        </ul>       
+  <div class="container-fluid">
+    <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+   <!-- <div class="d-flex justify-content-between"> -->
+   
+    <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent" [ngSwitch]="menuType">
+      <div>
+        <a routerLink=""><h1 >ShoperStop</h1></a>
       </div>
+      <div *ngIf="menuType === 'default'" class="search">
+        <input type="text" class="p-0">
+        <button class="btn btn-success mx-2">Search</button>
+      </div>
+      <ul class="navbar-nav  mb-2 mb-lg-0" *ngSwitchCase="'default'">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="seller-auth">Seller</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" routerLink="#">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" routerLink="#">Cart(0)</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav  mb-2 mb-lg-0" *ngSwitchCase="'seller'">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="seller-add-product">Add Product</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="seller-auth">Product's List</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="logOut()">Logout</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link">{{sellerName | titlecase}}</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+   </div>
+   
+  <!-- </div> -->
+</nav>
