--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -9,7 +9,7 @@
    
     <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent" [ngSwitch]="menuType">
       <div>
-        <a routerLink=""><h1 >ShoperStop</h1></a>
+        <a routerLink=""><img src="../../../assets/header-logo.png" class="header-Logo" alt=""></a>
       </div>
       <div *ngIf="menuType === 'default'" class="search">
         <input type="text" class="p-0">
