--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,19 @@
-<p>home works!</p>
+<div id="carouselExample" class="carousel slide">
+    <div class="carousel-inner" *ngIf="popularProduct">
+        <div class="carousel-item active" *ngFor="let product of popularProduct">
+            <img src="{{product.image}}" class="carousel-image d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>{{product.name}}</h5>
+                <p>{{product.desc}}</p>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
