--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,18 @@
-<div id="carouselExampleCaptions" class="carousel slide" *ngIf="popularProducts" data-bs-ride="carousel">
+<!-- <div id="carouselExampleCaptions" class="carousel slide" *ngIf="popularProducts" data-bs-ride="carousel">
   <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+      aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
-  <div class="carousel-inner" >
+  <div class="carousel-inner">
     <div class="carousel-item active" *ngFor="let product of popularProducts">
       <img src="{{product.image}}" class="carousel-image d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>{{product.name}}</h5>
         <p>{{product.desc}}</p>
       </div>
-    </div>    
+    </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -22,3 +23,26 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
+<div class="container my-5">
+  <div class="product-list-wrapper">
+    <div class="row">
+      <div class="col-lg-3 col-md-4 col-sm-6 my-2" *ngFor="let trproduct of trendyProducts">
+        <div class="card" >
+          <img class="card-img-top" src="{{trproduct.image}}" alt="Card image cap">
+          <div class="card-body d-flex flex-column align-items-center">
+            <h5 class="card-title">{{trproduct.name}}</h5>
+            <p class="card-text mb-0">{{trproduct.price}}</p>
+            <p class="card-text">{{trproduct.color}}</p>
+          </div>
+          <div class="card-footer d-flex justify-content-around">
+            <button routerLink="#" class="btn btn-primary">View Product</button>
+            <button routerLink="#" class="btn btn-primary">Add To kart</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> -->
+
+
