--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<!-- <div id="carouselExampleCaptions" class="carousel slide" *ngIf="popularProducts" data-bs-ride="carousel">
+<div id="carouselExampleCaptions" class="carousel slide" *ngIf="popularProducts" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
       aria-current="true" aria-label="Slide 1"></button>
@@ -43,6 +43,6 @@
       </div>
     </div>
   </div>
-</div> -->
+</div>
 
 
