--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,11 +1,11 @@
 <div class="container mt-5" *ngIf="productData">
     <div class="row">
-        <div class="col-sm-4" >
+        <div class="col-sm-4 detl-img-box" >
             <img src="{{productData.image}}" alt="">
         </div>
-        <div class="col-sm-8">
+        <div class="col-sm-8 detl-info-box">
             <div class="details">
-                <div>
+                <div >
                     <h2>{{productData.name}}</h2>
                 </div>
                 <div>
