--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -4,3 +4,17 @@
     height: 40px;
     border-radius: 50%;
 }
+.detl-img-box{
+    border: 1px solid #ddd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}   
+.detl-img-box img {
+    padding: 12px;
+    width: 100%;
+}
+.detl-info-box{
+    padding: 20px 30px;
+    border: 1px solid #ddd;
+}
