--- a/src/app/seller-auth/seller-auth.component.html
+++ b/src/app/seller-auth/seller-auth.component.html
@@ -14,8 +14,8 @@
             <div class="form-group">
                 <button class="btn btn-success">SignUp</button>
             </div>
-            <div class="text-center">
-                <a class="sellt oglerLink " (click)="showLogin()">Already have an Account ! Click Here</a>
+            <div class="text-center mt-3">
+                <a class="selltoglerLink " (click)="showLogin()">Already have an Account ! Click Here</a>
             </div>
         </form>
     </div>
@@ -37,7 +37,7 @@
                 <button class="btn btn-success">Login</button>
             </div>
             
-            <div class="text-center">
+            <div class="text-center mt-3">
                 <a class="selltoglerLink " (click)="showLogin()">Don't have an Account ! Click Here</a>
             </div>
         </form>
