add to cart localy
add to cart localy

--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -18,7 +18,7 @@
                 </div>
                 <div>
                     <button class="btn btn-success mr-1">Buy Now</button>
-                    <button class="btn btn-success mx-1">Add To Kart</button>
+                    <button class="btn btn-success mx-1" (click)="addToCart()">Add To Kart</button>
                 </div>
                 <div class="my-3">
                     <button class="btn btn-success" (click)="handleQuantity('plus')">+</button>
