--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -26,13 +26,13 @@
         <li class="nav-item"><a class="nav-link" routerLink="seller-auth">Seller</a></li>
         <li class="nav-item"><a class="nav-link active" aria-current="page" routerLink="">Home</a></li>
         <li class="nav-item"><a class="nav-link " routerLink="user-auth">Login/SignUp</a></li>
-        <li class="nav-item"><a class="nav-link " routerLink="#">Cart({{cartItems}})</a></li>
+        <li class="nav-item"><a class="nav-link " routerLink="/cart-page">Cart({{cartItems}})</a></li>
       </ul>
       <ul class="navbar-nav  mb-2 mb-lg-0" *ngSwitchCase="'user'"> 
         <li class="nav-item"><a class="nav-link" routerLink="seller-auth">Seller</a></li>
         <li class="nav-item"><a class="nav-link active" aria-current="page" routerLink="">Home</a></li>
         <li class="nav-item"><a class="nav-link "  (click)="userLogout()" routerLink="user-auth">Logout</a></li>
-        <li class="nav-item"><a class="nav-link " routerLink="#">Cart({{cartItems}})</a></li>
+        <li class="nav-item"><a class="nav-link " routerLink="/cart-page">Cart({{cartItems}})</a></li>
         <li class="nav-item"><a class="nav-link ">{{userName | titlecase}}</a></li>
       </ul>
       <ul class="navbar-nav  mb-2 mb-lg-0" *ngSwitchCase="'seller'">
